# erp42_ws

devel/: .catkin  .rosinstall
devel/include/rockauto_msgs/: AccelCmd.h  AdjustXY.h  BrakeCmd.h  Centroids.h  CloudCluster.h  CloudClusterArray.h  ColorSet.h  ControlCommand.h  ControlCommandStamped.h  DTLane.h  DetectedObject.h  DetectedObjectArray.h  ExtractedPosition.h  GeometricRectangle.h  ICPStat.h  ImageLaneObjects.h  ImageObj.h  ImageObjRanged.h  ImageObjTracked.h  ImageObjects.h  ImageRect.h  ImageRectRanged.h  IndicatorCmd.h  LampCmd.h  Lane.h  LaneArray.h  NDTStat.h  ObjLabel.h  ObjPose.h  PointsImage.h  ProjectionMatrix.h  RemoteCmd.h  ScanImage.h  Signals.h  State.h  StateCmd.h  SteerCmd.h  SyncTimeDiff.h  SyncTimeMonitor.h  TrackingObjectArray.h  (+13 more)
devel/include/vehicle_can_msg_pkg/: vehicle_can_msg.h
devel/include/yolov8_ROS/: BoundingBox.h  BoundingBoxArray.h
devel/lib/control/: global_path_pub.py  gpsimu_parser.py  local_path_pub.py  pure_pursuit.py
devel/lib/pkgconfig/: control.pc  erp_driver.pc  ouster_ros.pc  rockauto_msgs.pc  usb_cam.pc  vehicle_can_msg_pkg.pc  velodyne_driver.pc  yolov8_ROS.pc
devel/lib/usb_cam/: usb_cam_node
src/control/: CMakeLists.txt
src/control/launch/: gps_imu-parser.launch  path.launch  pure_pursuit.launch
src/control/path/: in_full.txt  out_full.txt
src/control/src/: global_path_pub.py  local_path_pub.py  pure_pursuit_just_path.py  pure_pursuit_test.py  pure_pursuit_yolo.py  test.py
src/rockauto_msgs/: CMakeLists.txt  package.xml  trackingdetection.msg
src/vehicle_can_msg_pkg/: CMakeLists.txt
(+185 files in other folders)
